# feature-extractor-for-landing-page

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
felp/: __main__.py
felp/barbieri2016/: document_object.py  input_feature.py  media.py  mobile_optimized.py  readability.py  semantic_similarity.py
felp/common/testing/: __init__.py  test_case.py
felp/zhou2016/aesthetic_appeal/: colors.py  photographic_quality.py  textures.py
felp/zhou2016/brand/: brand_quality.py
felp/zhou2016/clarity/: readability.py
felp/zhou2016/layout/: composition.py  readability.py
felp/zhou2016/product_service/: content.py
felp/zhou2016/trustworthiness/: content_coherence.py  language_style.py  language_usage.py  psychology.py
test_fixtures/: lp01.html  lp02.html  lp03.html  lp03_main_text.txt
test_fixtures/lp01/: main_text.txt  page.html
test_fixtures/lp02/: main_text.txt  page.html
test_fixtures/lp03/: main_text.txt  page.html
tests/: conftest.py
tests/barbieri2016/: document_object_test.py  input_feature_test.py  media_test.py  mobile_optimized_test.py  readability_test.py  semantic_similarity_test.py
tests/zhou2016/aesthetic_appeal/: colors_test.py  photographic_quality_test.py  textures_test.py
tests/zhou2016/brand/: brand_quality.py
tests/zhou2016/clarity/: readability_test.py
tests/zhou2016/layout/: composition_test.py  readability_test.py
tests/zhou2016/product_service/: content_test.py
tests/zhou2016/trustworthiness/: content_coherence_test.py  language_style_test.py  language_usage_test.py  psychology_test.py
